Fix: phone and social menu overlap logo

--- a/assets/src/less/header.less
+++ b/assets/src/less/header.less
@@ -173,6 +173,11 @@
 			padding-bottom: @double;
 		}
 
+		.home-link,
+		.site-tagline {
+			max-width: 50%;
+		}
+
 		.bp-contact-card,
 		.luigi-social-menu {
 			position: absolute;
@@ -180,6 +185,7 @@
 			left: 0;
 			.transform( translateY(-50%) );
 			margin: 0;
+			max-width: 25%;
 		}
 
 		.luigi-social-menu {
